# react

./: .eslintrc.js  .gitignore  CHANGELOG.md
.github/workflows/: runtime_build_and_test.yml
compiler/crates/react_compiler/: Cargo.toml
compiler/crates/react_compiler_ast/: Cargo.toml
compiler/crates/react_compiler_ast/src/: scope.rs  statements.rs
compiler/crates/react_compiler_diagnostics/: Cargo.toml
compiler/crates/react_compiler_hir/: Cargo.toml
compiler/crates/react_compiler_hir/src/: default_module_type_provider.rs  environment.rs  environment_config.rs  lib.rs  print.rs  type_config.rs  visitors.rs
compiler/crates/react_compiler_inference/: Cargo.toml
compiler/crates/react_compiler_lowering/: Cargo.toml
compiler/crates/react_compiler_optimization/: Cargo.toml
compiler/crates/react_compiler_reactive_scopes/: Cargo.toml
compiler/crates/react_compiler_ssa/: Cargo.toml
compiler/crates/react_compiler_typeinference/: Cargo.toml
compiler/crates/react_compiler_typeinference/src/: infer_types.rs
compiler/crates/react_compiler_utils/: Cargo.toml
compiler/crates/react_compiler_validation/: Cargo.toml
compiler/scripts/: test-e2e.ts
fixtures/flight-ssr-bench/: README.md  bench.js
fixtures/view-transition/server/: render.js
scripts/bench/: benchmark.js
scripts/error-codes/: codes.json
scripts/flow/: environment.js  react-devtools.js  react-native-host-hooks.js
scripts/jest/: setupTests.js
scripts/react-compiler/: link-compiler.sh
scripts/rollup/: build-all-release-channels.js
scripts/rollup/validate/: eslintrc.rn.js
(+38 files in other folders)
